--- a/HuskyEats/Base.lproj/Main.storyboard
+++ b/HuskyEats/Base.lproj/Main.storyboard
@@ -1,24 +1,88 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Root View Controller-->
+        <scene sceneID="iAT-zO-wo5">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <tableViewController id="7c1-pg-Sq3" customClass="RestaurantList" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="ICl-t7-PhA">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="123" id="DEw-tL-7b4" customClass="RestaurantCell" customModule="HuskyEats" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="123"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="DEw-tL-7b4" id="Wcb-33-tuR">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="122.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Tqx-7R-V4C">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="123"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="583-WR-Myx">
+                                            <rect key="frame" x="90" y="36" width="195" height="51"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="Tqx-7R-V4C" firstAttribute="top" secondItem="Wcb-33-tuR" secondAttribute="top" id="3w7-GJ-rw7"/>
+                                        <constraint firstAttribute="bottom" secondItem="Tqx-7R-V4C" secondAttribute="bottom" id="8ca-g6-5Vl"/>
+                                        <constraint firstAttribute="trailing" secondItem="Tqx-7R-V4C" secondAttribute="trailing" id="K37-xj-tP8"/>
+                                        <constraint firstItem="583-WR-Myx" firstAttribute="leading" secondItem="Wcb-33-tuR" secondAttribute="leadingMargin" constant="74" id="Nbh-58-2js"/>
+                                        <constraint firstItem="583-WR-Myx" firstAttribute="top" secondItem="Wcb-33-tuR" secondAttribute="topMargin" constant="25" id="Xt0-lF-m1Q"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="583-WR-Myx" secondAttribute="trailing" constant="74" id="fnj-pk-LqR"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="583-WR-Myx" secondAttribute="bottom" constant="25" id="iKO-cI-TXB"/>
+                                        <constraint firstItem="Tqx-7R-V4C" firstAttribute="leading" secondItem="Wcb-33-tuR" secondAttribute="leading" id="jSA-oM-xTf"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="cellImage" destination="Tqx-7R-V4C" id="Zwb-ra-r65"/>
+                                    <outlet property="cellTitle" destination="583-WR-Myx" id="Xp9-Bq-RPo"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="7c1-pg-Sq3" id="k6h-NL-cSo"/>
+                            <outlet property="delegate" destination="7c1-pg-Sq3" id="gWQ-VN-wbF"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="emT-Si-OzM"/>
+                    <connections>
+                        <outlet property="cellImage" destination="Tqx-7R-V4C" id="qzq-wS-hFL"/>
+                        <outlet property="cellTitle" destination="583-WR-Myx" id="Dro-NF-WY8"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4ge-d8-B5c" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-551.20000000000005" y="144.3778110944528"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="qbp-2W-ync">
+            <objects>
+                <navigationController id="g05-jX-FzO" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ath-kH-5Gh">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="7c1-pg-Sq3" kind="relationship" relationship="rootViewController" id="4Yl-ga-zYP"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="13T-AJ-mIC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1502" y="145"/>
         </scene>
     </scenes>
 </document>
